--- a/website/scss/_banner.scss
+++ b/website/scss/_banner.scss
@@ -59,8 +59,6 @@
                 min-height: 550px;
                 z-index: 5;
                 position: relative;
-                padding-left: 30px;
-                padding-right: 30px;
             }
             text-align: center;
 
